--- a/src/index.css
+++ b/src/index.css
@@ -113,6 +113,8 @@ section {
 }
 
 body {
+  font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans',
+    'Helvetica Neue', sans-serif;
   line-height: 1;
 }
 
