--- a/src/index.css
+++ b/src/index.css
@@ -206,6 +206,7 @@ html {
   font-size: 100%; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
   -ms-text-size-adjust: 100%; /* 2 */
+  background-color: #f6f9fb;
 }
 
 /**
